# fast-lzma2

./: .gitignore  AGENTS.md  CMakeLists.txt  COPYING  Lzma2Dec.c  Lzma2Dec.h  LzmaDecOpt.S  LzmaDecOpt.asm  Makefile  README.md  atomic.h  compiler.h  count.h  dict_buffer.c  dict_buffer.h  error_private.c  error_private.h  fast-lzma2.h  fl2_common.c  fl2_compress.c  fl2_compress_internal.h  fl2_decompress.c  fl2_error_private.c  fl2_error_private.h  fl2_errors.h  fl2_internal.h  fl2_pool.c  fl2_pool.h  fl2_threading.c  fl2_threading.h  fl2pool.c  lzma2_dec.c  lzma2_dec.h  lzma2_enc.c  lzma2_enc.h  lzma_dec_x86_64.asm  pool.c  pool.h  pool_.c  pool_.h  (+12 more)
bench/: Makefile  bench.c  bench.d  bench.vcxproj  datagen.d  list.txt
bench/Windows/: ReadMe.txt  bench.cpp  bench.sln  bench.vcxproj  bench.vcxproj.filters
bench/mingw/: Makefile
delphi/: LZMA2Dec.pas  README.md  RangeEnc.pas
dll/: libflzma2-dll.sln  libflzma2-dll.vcxproj  libflzma2-dll.vcxproj.filters  makefile
fuzzer/: Makefile  fuzzer.c
test/: Makefile  file_test.c  file_test.vcxproj
tests/: Makefile  datagen.c  file_test.c  file_test.vcxproj  fuzzer.c  fuzzer.vcxproj
tests/Windows/: fuzzer.sln  fuzzer.vcxproj  stdafx.cpp
